--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ nest-asyncio==1.5.7
 nltk==3.8.1
 notebook==7.0.0
 notebook_shim==0.2.3
-numpy==1.24.3
+numpy~=1.25.2
 oauthlib==3.2.2
 opt-einsum==3.3.0
 overrides==7.3.1
@@ -152,3 +152,5 @@ Werkzeug==2.3.6
 widgetsnbextension==4.0.8
 wrapt==1.15.0
 zipp==3.16.2
+
+fuzzywuzzy~=0.18.0
